// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styled() API should be able to override styles 1`] = `
.c0 {
  outline: none;
}

.c0[hidden] {
  display: none !important;
}

.c0 {
  color: rgba(var(--black-color-rgb),0.1);
  --current-color: var(--black-color,black);
  --current-color-rgb: var(--black-color-rgb);
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`styled() API should pass styles from tasty 1`] = `
.c0 {
  outline: none;
}

.c0[hidden] {
  display: none !important;
}

.c0 {
  color: rgba(var(--clear-color-rgb),0.1);
  --current-color: var(--clear-color,clear);
  --current-color-rgb: var(--clear-color-rgb);
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`styled() API should warn about deprecated API 1`] = `
Array [
  Array [
    "Tasty:",
    "\\"props\\" is deprecated, consider better alternative: inline props directly in styled(), eg: styled({ type: 'confirm' })",
  ],
]
`;
